# xorg__app__rstart

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  auth.c  client.cpp  config.in  configure.ac  rstart.man  rstartd.man  server.c  server.cpp  server.os2
commands/: Makefile.am
contexts/: .gitignore  Makefile.am
man/: Makefile.am  rstartd.man
scripts/: .gitignore  Makefile.am
